# cirkit

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile-x86_64  Makefile  README.md  alias  appveyor.yml  cirkit.rs  demo.cs  requirements.txt  setup-travis.sh  setup.py
addons/: .gitignore  CMakeLists.txt  README.md
addons/cirkit-addon-formal/: CMakeLists.txt
addons/cirkit-addon-formal/programs/: exact_synthesis.cpp
addons/cirkit-addon-mini/: CMakeLists.txt
addons/cirkit-addon-mini/programs/: mini_example.cpp
addons/cirkit-addon-reversible/: CMakeLists.txt  demo.cs
addons/cirkit-addon-reversible/lib/: REAME.md
addons/cirkit-addon-reversible/programs/: CMakeLists.txt
addons/cirkit-addon-reversible/src/: CMakeLists.txt
addons/cirkit-addon-reversible/test/: CMakeLists.txt
addons/cirkit-addon-revlib/: CMakeLists.txt
cli/: CMakeLists.txt  cirkit.cpp  filetypes.hpp  filetypes_revkit.hpp  revkit.cpp
cli/algorithms/: clpmap.hpp  collapse_mapping.hpp  cut_rewrite.hpp  dbs.hpp  equivalence_checking.hpp  esopbs.hpp  esopps.hpp  exact.hpp  genmod.hpp  lns.hpp  lut_mapping.hpp  lut_resynthesis.hpp  lutmap.hpp  mccost.hpp  migcost.hpp  mighty.hpp  miglut.hpp  minmc.hpp  miter.hpp  nct.hpp  npn.hpp  perm.hpp  print_gates.hpp  refactor.hpp  refactormc.hpp  resubstitute.hpp  rptm.hpp  satlut.hpp  satlut_mapping.hpp  simulate.hpp  spectral.hpp  stg.hpp  tbs.hpp  tofsim.hpp  tt.hpp
cli/stores/: aig.hpp  klut.hpp  mct.hpp  mig.hpp  perm.hpp  qc.hpp  tt.hpp  xag.hpp  xmg.hpp
cli/utils/: cirkit_command.hpp
gui/: CMakeLists.txt
gui/programs/gui/: main.cpp  main_widget.ui  main_window.cpp  main_window.hpp
gui/programs/viewer/: main.cpp  main_window.cpp  main_window.hpp  viewer_window.hpp
gui/src/: circuit_view.cpp  circuit_view.hpp  truth_table_widget.cpp  truth_table_widget.hpp
lib/: CMakeLists.txt  README.md  REAME.md
lib/alice/alice/: alice.hpp  api.hpp  cli.hpp  command.hpp  store.hpp  store_api.hpp  validators.hpp
lib/cli11/: CLI11.hpp
lib/extra/: extra.h  extraAddMisc.c  extraAddSpectra.c  extraBddAuto.c  extraBddBoundSet.c  extraBddDistance.c  extraBddKmap.c  extraBddMisc.c  extraBddPermute.c  extraBddSupp.c  extraBddSymm.c  extraBddUnate.c  extraBddWidth.c  extraDdMinterm.c  extraDdMisc.c  extraDdNodePath.c  extraDdPrint.c  extraDdShift.c  extraDdSigma.c  extraDdTimed.c  extraDdTransfer.c  extraUtilFile.c  extraUtilMemory.c  extraUtilMisc.c  extraUtilProgress.c  extraZddCover.c  extraZddExor.c  extraZddFactor.c  extraZddGraph.c  extraZddIsop.c  extraZddLitCount.c  extraZddMaxMin.c  extraZddMisc.c  extraZddPermute.c  extraZddSubSup.c
lib/puma/: README  puma.cpp  puma.h  tc_time.cpp  tc_time.h
programs/: CMakeLists.txt  calculate_required_lines.cpp  circuit_info.cpp  circuit_to_truth_table.cpp  embed_pla.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example_pattern.cpp  extend_truth_table.cpp  negative_controls_to_positive.cpp  permutation_to_pla.cpp  rcbdd_synthesis.cpp  young_subgroup_synthesis.cpp
programs/classical/: aig_cone.cpp  aig_rename.cpp  aig_to_smt2.cpp  approximate_bdd.cpp  pretty_print_aig.cpp  simulate_aig.cpp
programs/core/: abc_cli.cpp  bdd_info.cpp  cirkit.cpp  cirkit_python.cpp
programs/reversible/: adding_lines_optimization.cpp  benchmark_table.cpp  calculate_required_lines.cpp  circuit_info.cpp  circuit_to_truth_table.cpp  dd_synthesis.cpp  embed_pla.cpp  equivalence_check.cpp  exact_synthesis.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example_pattern.cpp  extend_truth_table.cpp  is_identity.cpp  negative_controls_to_positive.cpp  permutation_to_pla.cpp  pidd_debugging.cpp  random_reversible_circuit.cpp  random_reversible_circuit.cpp~  rcbdd_synthesis.cpp  reed_muller_synthesis.cpp  transform_circuit.cpp  transformation_based_synthesis.cpp  window_optimization.cpp  young_subgroup_synthesis.cpp
src/: CMakeLists.txt
src/abc/: abc_manager.hpp
src/alice/: alice.hpp  command.hpp  python.hpp  readline.hpp  rules.hpp
src/classical/: aig.cpp  aig.hpp  aig_word.cpp  aig_word.hpp  netlist_graphs.cpp  netlist_graphs.hpp  traits.cpp  traits.hpp
src/cli/: aig_command.cpp  aig_command.hpp  aig_mig_command.cpp  aig_mig_command.hpp  cirkit_command.cpp  cirkit_command.hpp  mig_command.cpp  mig_command.hpp  stores.cpp  stores.hpp  stores_io.cpp  stores_io.hpp  xmg_command.cpp  xmg_command.hpp
src/core/: circuit.cpp  circuit.hpp  cube.cpp  cube.hpp  functor.hpp  gate.hpp  pattern.cpp  properties.cpp  properties.hpp  rcbdd.cpp  rcbdd.hpp  target_tags.cpp  target_tags.hpp  truth_table.cpp  truth_table.hpp  version.cpp  version.hpp
src/lscli/: command.hpp  environment.cpp  environment.hpp  lscli.hpp  rules.cpp  rules.hpp  store.hpp  utils.cpp  utils.hpp
src/reversible/: circuit.cpp  circuit.hpp  gate.cpp  gate.hpp  pattern.cpp  pattern.hpp  rcbdd.cpp  rcbdd.hpp  target_tags.cpp  target_tags.hpp  truth_table.cpp  truth_table.hpp  variable.cpp  variable.hpp
test/: CMakeLists.txt  aigmeta.cpp  and.pla  approximate_additional_lines.cpp  benchmark_table.hpp  caching.h  characteristic_bdd.cpp  circuit.cpp  circuit_io.cpp  copy_circuit.cpp  esop_minimization.cpp  esop_synthesis.cpp  example.esop  example.pla  example2.pla  example3.pla  extend_truth_table.cpp  function.spec  infrastructure.cpp  or.pla  rcbdd.cpp  rcbdd_scalability.cpp  redundancy_functions.cpp  restricted_growth_sequence.cpp  synthesis.cpp  threads.cpp  truth_table.cpp  truth_table_based_synthesis.cpp
test/classical/: esop_minimization.cpp  truth_table_utils.cpp
test/core/: bdds.cpp  cubes.cpp  index_backtracking_set.cpp  index_bitset.cpp  infrastructure.cpp  regex.cpp  threads.cpp  timers.cpp
test/reversible/: approximate_additional_lines.cpp  caching.h  change_polarity.cpp  characteristic_bdd.cpp  circuit.cpp  circuit_io.cpp  copy_circuit.cpp  enumerate_irreversible.cpp  esop_synthesis.cpp  extend_truth_table.cpp  permutation.cpp  rcbdd_scalability.cpp  redundancy_functions.cpp  restricted_growth_sequence.cpp  synthesis.cpp  truth_table.cpp  truth_table_based_synthesis.cpp
(+1549 files in other folders)
