add_executable(cirkit cirkit.cpp)
target_link_libraries(cirkit PRIVATE alice mockturtle)

add_executable(revkit revkit.cpp)
target_link_libraries(revkit PRIVATE alice tweedledum mockturtle caterpillar)

if(WIN32)
target_compile_options(cirkit PRIVATE /bigobj)
target_compile_options(revkit PRIVATE /bigobj)
elseif(UNIX)
target_compile_options(cirkit PRIVATE -Wno-pragmas)
target_compile_options(revkit PRIVATE -Wno-pragmas)
endif()

if(BUILD_CBINDINGS)
add_library(cirkit_c SHARED cirkit.cpp)
target_link_libraries(cirkit_c PRIVATE alice mockturtle)
target_compile_definitions(cirkit_c PRIVATE ALICE_CINTERFACE)

if(WIN32)
target_compile_options(cirkit_c PRIVATE /bigobj)
elseif(UNIX)
target_compile_options(cirkit_c PRIVATE -Wno-pragmas)
endif()
endif()
