# Configuration
add_definitions(-Werror -fPIC)
add_ext_library("gmp;gmpxx")

subdirlist(directories ".")
foreach(dir ${directories})
  file(GLOB_RECURSE files ${dir}/*.cpp)
  foreach(adir ${addon_directories})
    file(GLOB_RECURSE addon_files ${CMAKE_SOURCE_DIR}/addons/${adir}/src/${adir}/*.cpp)
    set(files ${files} ${addon_files})
  endforeach()
  add_library(objlib_${dir} OBJECT ${files})
  add_library(cirkit_${dir} SHARED $<TARGET_OBJECTS:objlib_${dir}>)
  add_library(cirkit_${dir}_static STATIC $<TARGET_OBJECTS:objlib_${dir}>)
  target_link_libraries(cirkit_${dir} ${Boost_LIBRARIES})
  target_link_libraries(cirkit_${dir}_static ${Boost_LIBRARIES})
  foreach(library ${ext_libraries})
    target_link_libraries(cirkit_${dir} ${library})
    target_link_libraries(cirkit_${dir}_static ${library})
  endforeach()
endforeach()
